<resources>
    <string name="app_name">ProjetoRMIC</string>
    <string name="temp">Temperature:</string>
    <string name="label_max_value">Max. Temp:</string>
    <string name="max_value">Reading…</string>
    <string name="label_min_value">Min. Temp:</string>
    <string name="min_value">Reading…</string>
    <string name="label_avg_value">Avg. Temp:</string>
    <string name="avg_value">Reading…</string>
    <string name="label_illuminance">Illuminance:</string>
    <string name="illuminance_value">Reading…</string>
    <string name="label_faulty_cells">Faulty Cells:</string>
    <string name="faulty_cells_value">Reading…</string>
    <string name="label_timestamp">Last Reading:</string>
    <string name="timestamp">Reading…</string>
    <string name="heatmap_description">Description</string>
    <string name="colorbar_description">Description2</string>
    <string name="label_colorbar1">20ºC</string>
    <string name="label_colorbar2">25ºC</string>
    <string name="label_colorbar3">30ºC</string>
    <string name="label_colorbar4">35ºC</string>
    <string name="label_colorbar5">40ºC</string>
    <string name="label_colorbar6">45ºC</string>
    <string name="label_live_toolbar">Live View</string>
    <string name="label_faulty_toolbar">Faulty Data View</string>
</resources>