<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiveView">

    <!-- Toolbar Section -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_live_toolbar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Max Value Section -->
    <TextView
        android:id="@+id/maxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/label_max_value"
        app:layout_constraintStart_toEndOf="@+id/avgValue"
        app:layout_constraintTop_toTopOf="@+id/minLabel" />

    <TextView
        android:id="@+id/maxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_value"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/maxLabel"
        app:layout_constraintTop_toBottomOf="@+id/maxLabel" />

    <!-- Min Value Section -->
    <TextView
        android:id="@+id/minLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_min_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timestampLabel" />

    <TextView
        android:id="@+id/minValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_value"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/minLabel"
        app:layout_constraintTop_toBottomOf="@+id/minLabel" />

    <!-- Avg Value Section -->
    <TextView
        android:id="@+id/avgLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/label_avg_value"
        app:layout_constraintStart_toEndOf="@+id/minValue"
        app:layout_constraintTop_toTopOf="@+id/minLabel" />

    <TextView
        android:id="@+id/avgValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avg_value"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/avgLabel"
        app:layout_constraintTop_toBottomOf="@+id/avgLabel" />

    <!-- Faulty Cells Section -->
    <TextView
        android:id="@+id/faultyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/faulty_cells_value"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illuminanceValue" />

    <!-- Timestamp Section -->
    <TextView
        android:id="@+id/timestampLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/label_timestamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/colorbarLayout" />

    <TextView
        android:id="@+id/timestampValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/timestamp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/timestampLabel"
        app:layout_constraintTop_toTopOf="@+id/timestampLabel" />

    <!-- Illuminance Section -->
    <TextView
        android:id="@+id/illuminanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/label_illuminance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minValue" />

    <TextView
        android:id="@+id/illuminanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/illuminance_value"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illuminanceLabel" />

    <!-- Color bar Section -->
    <LinearLayout
        android:id="@+id/colorbarLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="170dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/colorbar"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/colorbarImageView"
                android:layout_width="410dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/colorbar_description"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/colorbarlegend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingTop="8dp"
                android:text="@string/label_colorbar20"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingTop="8dp"
                android:text="@string/label_colorbar30"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingTop="8dp"
                android:text="@string/label_colorbar40"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingTop="8dp"
                android:text="@string/label_colorbar50"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingTop="8dp"
                android:text="@string/label_colorbar60"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <!-- ImageView for Heatmap -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="550dp"
        android:layout_height="640dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/heatmap_description"
        android:rotation="90"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>